FO: Fix the size of attribute_list on mobile view

--- a/themes/default-bootstrap/sass/product.scss
+++ b/themes/default-bootstrap/sass/product.scss
@@ -1139,7 +1139,7 @@ Quick View Styles
 					}
 					#attributes .attribute_list {
 						.form-control {
-							width: 230px;
+							width: 100%;
 						}
 					}
 					.product_attributes,
